src/test/ui/structs/struct-path-alias-bounds.stderr
error[E0277]: the trait bound `NoClone: std::clone::Clone` is not satisfied
  --> $DIR/struct-path-alias-bounds.rs:16:10
   |
LL | type A = S<NoClone>;
   |          ^^^^^^^^^^ the trait `std::clone::Clone` is not implemented for `NoClone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
